Fixed z-index issue for notifications

--- a/shared/oae/css/oae.base.css
+++ b/shared/oae/css/oae.base.css
@@ -246,6 +246,10 @@ input.search-query,
 
 /* Bootstrap.notify overrides */
 
+.notifications {
+    z-index: 9999;
+}
+
 .notifications.top-center {
     top: 0px;
 }
